[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://ui/objective_widget.gd" id="1_objective"]
[ext_resource type="FontFile" path="res://Kenney Mini Square Mono.ttf" id="2_font"]
[ext_resource type="Texture2D" path="res://compass.png" id="3_compass"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_font")
font_size = 10
font_color = Color(0.95, 0.93, 0.78, 1)
outline_size = 2
outline_color = Color(0.1, 0.08, 0.06, 1)

[sub_resource type="LabelSettings" id="LabelSettings_body"]
font = ExtResource("2_font")
font_size = 8
font_color = Color(0.9, 0.88, 0.73, 1)
outline_size = 2
outline_color = Color(0.1, 0.08, 0.06, 1)

[node name="ObjectiveWidget" type="Control"]
anchors_preset = 0
offset_right = 150.0
offset_bottom = 60.0
script = ExtResource("1_objective")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="CompassRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CompassIcon" type="TextureRect" parent="VBoxContainer/CompassRow"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
pivot_offset = Vector2(10, 10)
texture = ExtResource("3_compass")
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="VBoxContainer/CompassRow"]
layout_mode = 2
size_flags_vertical = 1
text = "OBJECTIVE"
label_settings = SubResource("LabelSettings_title")
vertical_alignment = 1

[node name="GoalLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Reach the Final Oasis"
label_settings = SubResource("LabelSettings_body")

[node name="DistanceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "450 steps north"
label_settings = SubResource("LabelSettings_body")
